--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,13 @@
 ---
-
+import BlogPosts from "../components/BlogPosts.astro";
+import Projects from "../components/Projects.astro";
+import Welcome from "../components/Welcome.astro";
+import Page from "../layouts/Page.astro";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Page>
+	<Welcome />
+	<Projects />
+	<BlogPosts />
+</Page>
+
