--- a/src/components/BlogPostCard.astro
+++ b/src/components/BlogPostCard.astro
@@ -9,10 +9,10 @@ const dateOptions: object = {
 ---
 
 <a class="hover-highlight no-underline" href=`/blog/${id}`>
-    <div class="border-2 rounded-md p-2 h-24">
-        <span class="line-clamp-2">
+    <div class="border-2 rounded-md p-4 h-24">
+        <div class="overflow-hidden whitespace-nowrap text-ellipsis">
             <b>{title}</b> - <i>{description}</i>
-        </span>
+        </div>
         <p>{date.toLocaleDateString("en-US", dateOptions)}</p>
     </div>
 </a>
