Fixed mobile sizing issues

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 import { Icon } from "astro-icon/components";
 ---
 
-<footer class="max-w-md md:max-w-2xl mx-auto my-6 text-center items-center">
+<footer class="max-w-sm sm:max-w-md md:max-w-2xl mx-auto my-6 text-center items-center">
     <p class="text-md text-center">
         All my personal work is under a
         <a href="https://creativecommons.org/publicdomain/zero/1.0/"
