--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -9,7 +9,7 @@ const projects = (await getCollection(
 ---
 
 <Page widenPage={true}>
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-2">
+    <div class="grid grid-cols-1 lg:grid-cols-3 gap-2">
         {
             projects
                 .reverse()
