--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<header class="w-md md:w-2xl mx-auto p-8">
+<header class="w-sm sm:w-md md:w-2xl mx-auto p-8">
     <nav class="w-full inline-flex justify-around list-none">
         <li class="hover-highlight"><a class="no-underline" href="/">Home</a></li>
         <li class="hover-highlight"><a class="no-underline" href="/projects">Projects</a></li>
