Added schulich page and fixed images

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -5,7 +5,7 @@ import Page from "../layouts/Page.astro";
 <Page showHeaderFooter={false}>
     <div class="flex h-screen items-center">
         <div class="flex flex-col items-center">
-            <img src="/src/assets/404.png" class="w-64 mx-auto aspect-auto" />
+            <img src="src/assets/404.png" class="w-64 mx-auto aspect-auto" />
             <p>
                 Seems like something went wrong... we couldn't find that page.
             </p>
