--- a/src/pages/schulich.astro
+++ b/src/pages/schulich.astro
@@ -3,7 +3,7 @@ import Page from "../layouts/Page.astro";
 ---
 
 <Page>
-    <img src="src/assets/scholar.png" class="w-64 mx-auto aspect-auto">
+    <img src="/src/assets/scholar.png" class="w-64 mx-auto aspect-auto">
     <p class="text-center">
         I am a <a href="https://schulichleaders.com/scholars/"
             >2025 Schulich Leader</a
