--- a/src/pages/schulich.astro
+++ b/src/pages/schulich.astro
@@ -1,9 +1,10 @@
 ---
 import Page from "../layouts/Page.astro";
+import scholarImg from "../assets/scholar.png"
 ---
 
 <Page>
-    <img src="/src/assets/scholar.png" class="w-64 mx-auto aspect-auto">
+    <img src={scholarImg.src} alt="A red ghost with a graduation cap next to a stack of three books." class="w-64 mx-auto aspect-auto">
     <p class="text-center">
         I am a <a href="https://schulichleaders.com/scholars/"
             >2025 Schulich Leader</a
