Remove schulich page

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -14,5 +14,5 @@ import Section from "./Section.astro";
 
     <p class="text-center pt-4">Welcome to my little corner of the internet!</p>
 
-	<p class="text-center mt-8"><a href="/schulich" class="hover-highlight">I am a Schulich Leader, ask me anything!</a></p>
+	<!-- <p class="text-center mt-8"><a href="/schulich" class="hover-highlight">I am a Schulich Leader, ask me anything!</a></p> -->
 </Section>
